--- a/week4/code/main1.tex
+++ b/week4/code/main1.tex
@@ -4,9 +4,9 @@
 \usepackage[margin=0.8in]{geometry}
 \usepackage[compact]{titlesec}
 
-\setlength{\parskip}{0pt} % 删除段落间距
-\setlength{\parindent}{0em} % 删除段落缩进
-\renewcommand{\baselinestretch}{0.9} % 压缩行间距
+\setlength{\parskip}{0pt} 
+\setlength{\parindent}{0em} 
+\renewcommand{\baselinestretch}{0.9} 
 
 \begin{document}
 \pagestyle{empty}
